<resources>
    <string name="app_name">Sina</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_phone">لطفا شماره تلفن همراه را وارد کنید</string>
    <string name="enter_amount_and_operator">لطفا مبلغ و اپراتور را انتخاب کنید</string>

    <string name="customer">مشتری</string>
    <string name="seller">فروشنده</string>
    <string name="seller_receipt">رسید فروشنده</string>
    <string name="again_receipt">رسید مجدد</string>
    <string name="transaction_success">تراکنش موفق</string>
    <string name="transaction_unsuccess">تراکنش ناموفق</string>
    <string name="buy_customer">خرید-مشتری</string>
    <string name="buy_seller">خرید-فروشنده</string>
    <string name="customer_sign">امضای مشتری</string>
    <string name="bill_operation">پرداخت قبض</string>
    <string name="bill_customer">پرداخت قبض-مشتری</string>
    <string name="balance_operation">مانده گیری</string>
    <string name="topup_operation">خرید شارژ</string>
    <string name="bill_name">سازمان قبض:</string>
    <string name="bill_id">شناسه قبض:</string>
    <string name="payment_code">شناسه پرداخت:</string>
    <string name="company_id">شناسه شرکت:</string>
    <string name="company_name">نام شرکت:</string>
    <string name="tracking_number">شماره پیگیری</string>
    <string name="card_number">شماره کارت</string>
    <string name="refrence_number">شماره مرجع</string>
    <string name="shift_number">شماره شیفت</string>
    <string name="tracking_and_reference">پیگیری/مرجع</string>
    <string name="terminal_number">شماره پایانه</string>
    <string name="bank_name">نام بانک</string>
    <string name="bank_issuer">بانک صادرکننده:</string>
    <string name="shop_id">شناسه فروشگاه</string>
    <string name="charge_price">مبلغ شارژ</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="phone_number2">شماره موبایل:</string>
    <string name="customer_receipt">رسید مشتری</string>
    <string name="customer_bill">پرداخت قبض-مشتری</string>
    <string name="balance_customer">موجودی-مشتری</string>
    <string name="kargozari_customer">شرکت سوم-مشتری</string>
    <string name="balance">موجودی:</string>
    <string name="balancee">موجودی</string>
    <string name="amount">مبلغ:</string>
    <string name="balance_wage">کارمزد عملیات مانده موجودی</string>
    <string name="bill_amount">مبلغ قبض</string>
    <string name="charge_amount">مبلغ شارژ</string>
    <string name="charge_amount2">مبلغ شارژ:</string>
    <string name="charge_hamrah_aval">خرید شارژ همراه اول-مشتری</string>
    <string name="charge_irancel">خرید شارژ ایرانسل-مشتری</string>
    <string name="charge_rightel">خرید شارژ رایتل-مشتری</string>
    <string name="charge_hamrah_aval_">خرید شارژ همراه اول</string>
    <string name="charge_irancel_">خرید شارژ ایرانسل</string>
    <string name="charge_rightel_">خرید شارژ رایتل</string>
    <string name="charge_serial">سریال شارژ:</string>
    <string name="charge_code">رمز شارژ:</string>
    <string name="charge_command">دستور:</string>
    <string name="charge_direct">شارژ مستقیم-مشتری</string>
    <string name="charge_direct_">شارژ مستقیم</string>
    <string name="command_hamrah_aval"> Yes-Ok #رمز*140*</string>
    <string name="command_irancel">Yes-Ok #رمز*141*</string>
    <string name="receipt_unsuccessful_message_direct_charge">مشتری گرامی: \nدر صورت بروز هر گونه مشکل در شارژ سیم کارت، با شماره تلفن 23505-021 تماس حاصل نمایید</string>
    <string name="receipt_unsuccessful_message">مشتری گرامی: \nدر صورت کسر وجه از حساب شما، مبلغ مذکور طی ۷۲ ساعت به حساب شما عودت خواهد شد در غیر اینصورت جهت پیگیری لطفا با شماره تلفن 23505-021 تماس حاصل نمایید</string>
    <string name="phone">تلفن:</string>
    <string name="hamrah_aval">همراه اول:</string>
    <string name="irancel">ایرانسل:</string>
    <string name="rightel">رایتل:</string>
    <string name="card_corrupted">خطا در دریافت اطلاعات کارت</string>
    <string name="buy">خرید</string>
    <string name="bill_payment">پرداخت قبض</string>
    <string name="buy_charge">خرید شارژ</string>
    <string name="direct_charge">شارژ مستقیم</string>
    <string name="charge">شارژ</string>
    <string name="sum">مجموع</string>
    <string name="date_time">تاریخ و زمان:</string>
    <string name="buy_amount">مبلغ خرید:</string>
    <string name="tracking_number2">شماره پیگیری:</string>
    <string name="reference_number2">شماره مرجع:</string>
    <string name="guide_charge">عبارت زیر را در تلفن همراه خود وارد کرده، دکمه ی شماره گیری را فشار دهید.</string>
    <string name="guide_hamrah_aval">این شارژ قابل انتقال نیست\nاز اعتبار کارت، مبلغ مالیات و عوارض، طبق نرخ سال جاری کسر شده است.</string>
    <string name="guide_irancel">20% شارژ بیشتر با شارژ شگفت انگیز ایرانسل(دارای مدت زمان محدود مصرف) با</string>
    <string name="guide_irancel2">این شارژ قابل انتقال نیست</string>


    <string name="label_printer_tests">Print Tests</string>
    <string name="label_printer_text">Print Text</string>
    <string name="label_printer_margin">Print Text test1</string>
    <string name="label_printer_barcode">Print Barcode</string>
    <string name="label_printer_qrcode">Print QRcode</string>
    <string name="label_printer_bitmap">Print Bitmap</string>
    <string name="label_printer_receipt1">Print Receipt1</string>
    <string name="label_printer_receipt2">Diff Fonts Comparasion</string>
    <string name="label_printer_receipt3">Print Receipt3</string>
    <string name="label_printer_wrappaper">Wrap Paper</string>
    <string name="label_printer_speed">Print Speed</string>
    <string name="label_printer_font">Print Different Font</string>
    <string name="label_printer_version">Printer Version</string>
    <string name="label_printer_upgrade">Printer Upgrade</string>
    <string name="label_printer_paper">Paper Detect</string>
    <string name="label_printer_length">Paper Length</string>
    <string name="label_printer_fmversion">Firmware Version</string>

    <string name="label_send_rawdata">Send Raw Data</string>
    <string name="label_printer_temperature">Temperature Detect</string>

    <string name="text_printer_speed_settings">Speed Settings</string>
    <string name="text_printer_font_settings">Print Differnt Fonts</string>
    <string name="company">پرداخت الکترونیک پارسیان</string>
    <string name="slogan">تسهیل فرآیند پرداخت خریداران و فروشندگان</string>
    <string name="version">ورژن</string>
    <string name="settings">تنظیمات</string>
    <string name="reports">گزارشات</string>
    <string name="bills">پرداخت قبض</string>
    <string name="mobile">خرید شارژ</string>
    <string name="balance2">موجودی با کارمزد 1206 ریال</string>
    <string name="shoppingconfiguration">پیکربندی فروشگاهی</string>
    <string name="bankingconfiguration">پیکربندی بانکی</string>
    <string name="configuration">پیکربندی</string>
    <string name="enter_terminal_password">لطفا رمز ترمینال را وارد کنید</string>
    <string name="enter_kargozar_password">لطفا رمز کارگزار را وارد کنید</string>
    <string name="enter_card_password">لطفا رمز کارت را وارد کنید</string>
    <string name="terminal_password_hint">رمز ترمینال</string>
    <string name="kargozar_password_hint">رمز کارگزار</string>
    <string name="card_password_hint">رمز کارت</string>
    <string name="confirm">تایید</string>
    <string name="cansel">لغو</string>
    <string name="bill_type">نوع قبض :</string>
    <string name="operator">اپراتور:</string>
    <string name="bank">بانک:</string>
    <string name="swipe">لطفا کارت خود را بکشید</string>
    <string name="serial_number">شماره سریال:</string>
    <string name="buy_qr">خرید با QR</string>
    <string name="enter_buy_amount">مبلغ خرید را وارد کنید</string>
    <string name="remaining_seconds">%1$d</string>


</resources>
