<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_background">

            <ImageButton
                android:id="@+id/back"
                android:src="@drawable/chevron_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:layout_width="56dp"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:layout_height="56dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_alignBaseline="@id/back"
                android:layout_marginTop="18dp"
                android:layout_toLeftOf="@id/back"
                android:fontFamily="@font/iransansbold"
                android:gravity="center"
                android:text="لطفا نوع عملیات را انتخاب کنید"
                android:textColor="@color/white"
                android:textSize="@dimen/titre" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:background="@drawable/gray_background">


            <LinearLayout
                android:layout_marginTop="55dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lnr_buy"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:background="@drawable/green_background"
                        android:layout_marginEnd="5dp"
                        android:gravity="center">

                        <ImageView
                            android:src="@drawable/shopping_cart_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textColor="@color/white"
                            android:fontFamily="@font/iransansbold"
                            android:textSize="@dimen/titre"
                            android:layout_marginTop="10dp"
                            android:text="@string/buy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:id="@+id/lnr_balance"
                        android:orientation="vertical"
                        android:background="@drawable/pink_background"
                        android:layout_marginStart="5dp"
                        android:gravity="center">

                        <ImageView
                            android:src="@drawable/mande_hesab_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textColor="@color/white"
                            android:fontFamily="@font/iransansbold"
                            android:textSize="@dimen/titre"
                            android:layout_marginTop="10dp"
                            android:text="@string/balance2"
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/lnr_charge"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical"
                        android:background="@drawable/purple_background"
                        android:layout_marginEnd="5dp"
                        android:gravity="center">

                        <ImageView
                            android:src="@drawable/phone_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textColor="@color/white"
                            android:fontFamily="@font/iransansbold"
                            android:textSize="@dimen/titre"
                            android:layout_marginTop="10dp"
                            android:text="@string/mobile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="0.5"
                        android:id="@+id/lnr_bill"
                        android:background="@drawable/yellow_background"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/bill_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/iransansbold"
                            android:text="@string/bills"
                            android:textColor="@color/white"
                            android:textSize="@dimen/titre" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </FrameLayout>
</layout>