<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_gray">

        <RelativeLayout
            android:id="@+id/top_rtl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back"
                android:src="@drawable/chevron_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:layout_width="56dp"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:layout_height="56dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:gravity="center"
                android:textSize="@dimen/large_titre"
                android:fontFamily="@font/iransansbold"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_toLeftOf="@id/back"
                android:text="@string/settings" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_below="@id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:textSize="@dimen/title"
                android:fontFamily="@font/iransansbold"
                android:layout_marginTop="15dp"
                android:textColor="@color/dark_gray" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="23dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_rtl">

            <androidx.cardview.widget.CardView
                android:id="@+id/seller"
                android:layout_marginTop="15dp"
                android:background="@drawable/white_background"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardCornerRadius="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/store" />

                    <TextView
                        android:text="@string/seller"
                        android:textColor="@color/slate"
                        android:fontFamily="@font/iransansbold"
                        android:textSize="@dimen/titre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:focusableInTouchMode="true"
                android:id="@+id/configuration"
                android:layout_marginTop="15dp"
                android:background="@drawable/white_background"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:cardCornerRadius="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:gravity="start|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cogwheel" />

                    <TextView
                        android:text="@string/configuration"
                        android:textColor="@color/slate"
                        android:fontFamily="@font/iransansbold"
                        android:textSize="@dimen/titre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>
                <requestFocus/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>