<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.fanap.sina.bill.BillDetailViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".buy.view.AmountFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_background">

            <ImageButton
                android:focusable="false"
                android:id="@+id/back"
                android:src="@drawable/chevron_icon"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="18dp"
                android:layout_width="56dp"
                android:background="@color/transparent"
                android:scaleType="centerInside"
                android:layout_height="56dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:textSize="@dimen/titre"
                android:fontFamily="@font/iransansbold"
                android:textColor="@color/white"
                android:layout_alignBaseline="@id/back"
                android:layout_toLeftOf="@id/back"
                android:text="پرداخت قبض" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:gravity="center"
                android:textSize="@dimen/titre"
                android:fontFamily="@font/iransansbold"
                android:layout_alignParentRight="true"
                android:textColor="@color/gray"
                android:layout_alignBaseline="@id/back"
                android:layout_marginRight="18dp"
                android:layout_below="@id/back"
                android:text="جزئیات قبض به شرح زیر می باشد" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:background="@drawable/gray_background">

            <ScrollView
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/bottom"
                android:background="@drawable/white_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/img"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"/>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:textSize="@dimen/title"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/blue_gray"
                            android:text="@string/bill_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/txt_bill_type"
                            android:textSize="@dimen/title"
                            android:text="برق"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/dash"/>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:textSize="@dimen/title"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/blue_gray"
                            android:text="@string/amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/txt_amount"
                            android:textSize="@dimen/title"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:textSize="@dimen/title"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/blue_gray"
                            android:text="@string/bill_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/txt_bill_id"
                            android:textSize="@dimen/title"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_bank"
                            android:textSize="@dimen/title"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/blue_gray"
                            android:text="@string/payment_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/txt_pay_id"
                            android:textSize="@dimen/title"
                            android:fontFamily="@font/iransansbold"
                            android:textColor="@color/dark"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/bottom"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">

                <Button
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/iransansbold"
                    android:textSize="@dimen/titre"
                    android:id="@+id/cancel"
                    android:backgroundTint="@color/cansel"
                    android:textColor="@color/white"
                    android:text="لغو عملیات"
                    android:layout_weight="0.35"/>

                <Button
                    android:id="@+id/confirm"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/iransansbold"
                    android:textSize="@dimen/titre"
                    android:textColor="@color/white"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/green"
                    android:text="تایید و ادامه"
                    android:drawableLeft="@drawable/flash_icon"
                    android:paddingLeft="20dp"
                    android:layout_weight="0.65"/>

            </LinearLayout>

        </RelativeLayout>

    </FrameLayout>
</layout>